# manim-jupyter

./: .gitignore  README.md  flake.nix  pyproject.toml
notes/: hello.ipynb  voice.ipynb
