[tool.poetry]
name = "manim-jupyter"
version = "0.1.0"
description = "Try manim (the tool from 3b1b) in jupyter r13y"
authors = ["LuoChen <luochen1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
manim = "^0.18.1"
jupyterlab = "^4.2.4"
manim-voiceover = {extras = ["all"], version = "^0.3.6.post0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
